syntax = "proto3";

package greeter;

option go_package = "github.com/go-grpc-kit/go-grpc-kit/examples/simple/proto";

// Greeter 服务定义
service Greeter {
  // 发送问候
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloResponse {
  string message = 1;
}